--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,45 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
+## NOVO
+
+# Set the default terminal
+set -g default-terminal "xterm-ghostty"
+
+# Set True colors cocozin
+set-option -ga terminal-overrides ",tmux-256color:RGB"
+# # Enable 256 colors
+# set -g default-terminal "tmux-256color"
+#
+# # Enable RGB color support
+# set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides ",ghostty:Tc"
+#
+# # Fix colors for various programs
+# set -ga terminal-overrides ",*256col*:RGB"
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+set -g mouse on
+
+# Initialize TMUX plugin manager (keep this line at the very bottom)
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Enable automatic restore
+set -g @continuum-restore 'on'
+
+# Optional: Set autosave interval (default is 15 minutes)
+set -g @continuum-save-interval '15'
+
+run '/var/home/andreluis/.tmux/plugins/tpm/tpm'
+
