--- a/tmux.conf
+++ b/tmux.conf
@@ -19,5 +19,5 @@ set -g @continuum-restore 'on'
 # Optional: Set autosave interval (default is 15 minutes)
 set -g @continuum-save-interval '15'
 
-run '/var/home/andreluis/.tmux/plugins/tpm/tpm'
+run '/home/andreluis/.tmux/plugins/tpm/tpm'
 
