--- a/tmux.conf
+++ b/tmux.conf
@@ -18,3 +18,5 @@ set -g @continuum-restore 'on'
 
 # Optional: Set autosave interval (default is 15 minutes)
 set -g @continuum-save-interval '15'
+
+run "$HOME/.tmux/plugins/tpm/tpm"
